--- a/index.html
+++ b/index.html
@@ -26,23 +26,24 @@
             <button>Ler Mais</button>
         </section>
 
-        <section>
+        <section class="segunda-seçao">
           <h2>Novo</h2>
            
-          <div>
+          <div class="margin-border-padding">
             <h3>Hidrogênio VS Carros Elétricos</h3>
             <p>Os carros movidos a hidrogênio alguma vez alcançarão os veículos elétricos?</p>
           </div>
-          <div>
+          <div class="margin-border-padding">
             <h3>A arte gerada por IA</h3>
             <p>Quais são os possíveis efeitos adversos da geração de imagens por IA sob demanda?</p>
           </div>
-          <div>
+          <div class="margin-border-padding">
             <h3>O VC Funding está esgotado?</h3>
             <p>O financiamento privado por empresas de capital de risco caiu 50%.</p>
           </div>
 
         </section>
+
         <section>
             <div>
                 <img src="./assets/images/image-retro-pcs.jpg" alt="imagem de pcs antigos">
@@ -70,6 +71,7 @@
                 </div>
             </div>
         </section>
+
       </main>
     </body>
 </html>
