css basico completo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         </section>
 
-        <section>
+        <section class="terceira-seçao">
             <div>
                 <img src="./assets/images/image-retro-pcs.jpg" alt="imagem de pcs antigos">
                 <div>
