javascript para abrir e fechar menu completo

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
     <title>W. Notícias</title>
 </head>
-<body class="menu-open">
+<body>
     <header class="header-mobile">
         <img src="/assets/images/logo.svg" alt="Logo do site de noticias">
 
@@ -22,7 +23,7 @@
             <button>
                 <img src="./assets/images/icon-menu-close.svg" alt="icone de x para fechar o menu">
             </button>
-            
+
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
