--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <title>W. Notícias</title>
 </head>
 <body>
-    <header class="header-mobile">
+    <header>
         <img src="/assets/images/logo.svg" alt="Logo do site de noticias">
 
         <button>
             <img src="./assets/images/icon-menu.svg" alt="icone do menu hamburguer">
         </button>
 
-        <nav>
+        <nav class="mobile">
 
             <button>
                 <img src="./assets/images/icon-menu-close.svg" alt="icone de x para fechar o menu">
@@ -30,11 +30,26 @@
             <a href="#">Trending</a>
             <a href="#">Categorias</a>
         </nav>
+
+            <nav class="desktop">
+          <a href="#">Home</a>
+            <a href="#">Novo</a>
+            <a href="#">Popular</a>
+            <a href="#">Trending</a>
+            <a href="#">Categorias</a>
+        </nav>
+
+    
     </header>
+
 
       <main>
         <section class="primeira-seçao">
-            <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzzle colorido">
+            <picture>
+                <source media="(min-width: 700px)" srcset="./assets/images/image-web-3-mobile.jpg">
+             <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzzle colorido">
+            </picture>
+
             <h1>O futuro brilhante da Web 3.0?</h1>
             <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
             <button>Ler Mais</button>
