--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                 <img src="./assets/images/image-retro-pcs.jpg" alt="imagem de pcs antigos">
                 <div>
                     <strong>01</strong>
-                    <h2>Revivendo PCs antigos</h2>
+                    <a href="#">
+                        <h2>Revivendo PCs antigos</h2>
+                    </a>
                     <p>E se PCs antigos pudessem receber peças modernas?</p>
                 </div>
             </div>
@@ -89,7 +91,9 @@
                 <img src="./assets/images/image-top-laptops.jpg" alt="imagem de laptop">
                 <div>
                     <strong>02</strong>
-                    <h2>Top 10 Laptops de 2025</h2>
+                    <a href="#">
+                        <h2>Top 10 Laptops de 2025</h2>
+                    </a>
                     <p>Nossas melhores escolhas para diversas necessidades.</p>
                 </div>
             </div>
@@ -97,7 +101,9 @@
                 <img src="./assets/images/image-gaming-growth.jpg" alt="imagem de um controle de videogame">
                 <div>
                     <strong>03</strong>
-                    <h2>O Crescimento dos Jogos</h2>
+                    <a href="#">
+                        <h2>O Crescimento dos Jogos</h2>
+                    </a>
                     <p>Como a pandemia tem gerado novas oportunidades.</p>
                 </div>
             </div>
